Automatically backed up by Learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,7 +11,7 @@
     <form action="index.html" method="post">
       <p><input type="text" name="username"></p>
       <p><input type="text" name="password"></p>
-      <input type="submit" name="" value="">
+      <input type="submit" value="Log In">
     </form>
   </body>
 </html>
