--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,7 +8,7 @@
   <body id="page-top">
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
-    <form action="index.html" method="post">
+    <form action="/login" method="post">
       <p><input type="text" name="username"></p>
       <p><input type="text" name="password"></p>
       <input type="submit" value="Log In">
