--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -9,8 +9,8 @@
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
     <form action="/login" method="post">
-      <p><input type="text" name="username"></p>
-      <p><input type="text" name="password"></p>
+      <p>username: <input type="text" name="username"></p>
+      <p>password: <input type="text" name="password"></p>
       <input type="submit" value="Log In">
     </form>
   </body>
