--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">
   </head>
   <body id="page-top">
-    <a href="/logout">Log Out</a>
+    <% if is_logged_in?(session) %>
+      <a href="/logout">Log Out</a>
+      <%= current_user(session).username %>
 
   </body>
 </html>
