--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -9,6 +9,7 @@
     <% if is_logged_in?(session) %>
       <a href="/logout">Log Out</a>
       <%= current_user(session).username %>
+      <%= current_user(session).balance %>
 
   </body>
 </html>
