--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -8,8 +8,8 @@
   <body id="page-top">
     <% if Helpers.is_logged_in?(session) %>
       <a href="/logout">Log Out</a>
-      <%= current_user(session).username %>
-      <%= current_user(session).balance %>
+      <%= Helpers.current_user(session).username %>
+      <%= Helpers.current_user(session).balance %>
     <% else %>
       <a href="/">Home</a>
     <% end %>
