--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -8,7 +8,7 @@
   <body id="page-top">
     <% if Helpers.is_logged_in?(session) %>
       <a href="/logout">Log Out</a>
-      <%= Helpers.current_user(session).username %>
+      <p><%= Helpers.current_user(session).username %><p>
       <%= Helpers.current_user(session).balance %>
     <% else %>
       <a href="/">Home</a>
