--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -8,7 +8,7 @@
   <body id="page-top">
     <% if Helpers.is_logged_in?(session) %>
       <a href="/logout">Log Out</a>
-      <p><%= Helpers.current_user(session).username %><p>
+      <p>Welcome <%= Helpers.current_user(session).username %><p>
       <p><%= Helpers.current_user(session).balance %><p>
     <% else %>
       <a href="/">Home</a>
