--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -9,7 +9,7 @@
     <% if Helpers.is_logged_in?(session) %>
       <a href="/logout">Log Out</a>
       <h1>Welcome <%= Helpers.current_user(session).username %></h1>
-      <p><%= Helpers.current_user(session).balance %><p>
+      <h3><%= Helpers.current_user(session).balance %></h3>
     <% else %>
       <a href="/">Home</a>
     <% end %>
